--- a/Nodes/Translations/Translations.yaml
+++ b/Nodes/Translations/Translations.yaml
@@ -9,7 +9,7 @@ Children:
   Value: 
    {
     "Type": 12,
-    "Dimensions": [64,2],
+    "Dimensions": [65,2],
     "Body": [
      "","en-US",
      "Reboot","Reboot",
@@ -74,6 +74,7 @@ Children:
      "RemoteConnections","Remote connections",
      "Connected"," Connected",
      "AllowUserToConnect","Allow user \"{0}\" from IP address {1} to connect?",
-     "RegisterToDomainDeviceID","Device ID:"
+     "RegisterToDomainDeviceID","Device ID:",
+     "Vector array","Vector array"
     ]
    }
