added alarms pages

--- a/Nodes/Translations/Translations.yaml
+++ b/Nodes/Translations/Translations.yaml
@@ -9,7 +9,7 @@ Children:
   Value: 
    {
     "Type": 12,
-    "Dimensions": [65,2],
+    "Dimensions": [78,2],
     "Body": [
      "","en-US",
      "Reboot","Reboot",
@@ -75,6 +75,19 @@ Children:
      "Connected"," Connected",
      "AllowUserToConnect","Allow user \"{0}\" from IP address {1} to connect?",
      "RegisterToDomainDeviceID","Device ID:",
-     "Vector array","Vector array"
+     "Vector array","Vector array",
+     "Timestamp","Timestamp",
+     "TimedShelve","Timed Shelve",
+     "Acknowledge","Acknowledge",
+     "Acknowledge All","Acknowledge All",
+     "Active","Active",
+     "Confirm","Confirm",
+     "OneShotShelve","One-Shot Shelve",
+     "Confirm All","Confirm All",
+     "SourceName","Source Variable",
+     "Message","Message",
+     "Acked","Acked",
+     "Confirmed","Confirmed",
+     "Severity","Severity"
     ]
    }
